# KPTemp

./: Cargo.toml  build.rs  kptemp_build_32.bat  kptemp_build_64.bat  move.bat
src/: clean.rs  globals.rs  main.rs  process.rs  utils.rs
src/gui/: button.rs  checkbox.rs  errors.rs  events.rs  label.rs  mod.rs  progress_bar.rs  windows.rs  windows_helper.rs
